test/langtools/tools/javac/superInit/SuperInitBad09.out
SuperInitBad09.java:12:30: compiler.err.not.encl.class: java.util.concurrent.atomic.AtomicReference
1 error
